--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 
-li, a{
+li, a, button{
   font-family:  "montserrat",sans-serif ;
   font-weight: 500;
   font-size:  16px;
@@ -18,6 +18,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 30px 10%;
 }
 
 .logo {
@@ -30,20 +31,20 @@ header {
   background-color:var(--nav-color);
 }
 
-.nav-links {
+.nav_links {
   list-style: none;
 }
 
-.nav-links li {
+.nav_links li {
   display: inline-block;
   padding: 0px 20px;
 }
 
-.nav-links li a{
+.nav_links li a{
   transition: all 0.3s ease 0s;
 }
 
-.nav-links li a:hover {
+.nav_links li a:hover {
   color:blanchedalmond ;
 }
 
